[AT-39] Fix images carousel on mobile

--- a/client/src/scss/components/imagesCarousel.scss
+++ b/client/src/scss/components/imagesCarousel.scss
@@ -5,5 +5,12 @@
 .images-carousel {
   @include media(mobile) {
     // margin-bottom: 20px;
+    border: 1px solid $COLOR-GREY-ACTIVE;
+    border-radius: 4px;
+    overflow: hidden;
+
+    .lingallery_thumbnails {
+      background-color: $COLOR-GREY-ACTIVE;
+    }
   }
 }
